<resources>
    <string name="app_name">Onand Coffee</string>

    //Login
    <string name="login_msg">Login to your account</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    //Register
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="please_fill">Please fill all fields!</string>
    <string name="enter_valid_email">Please enter valid email!</string>
    <string name="password_short">Password to short! (min: 6 characters)</string>
    <string name="email_username_used">Email / username are used!</string>

    //Home
    <string name="contact">Contact</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="menu">Menu</string>
    <string name="meja">Table</string>
    <string name="kategori_menu">Menu</string>
    <string name="history_transaksi">Transaction History</string>
    <string name="stok_barang">Stok Barang</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="press_back_to_exit">Press back again to exit!</string>

    //Table
    <string name="warning">Warning</string>
    <string name="set_unoccupied">Set this table to unoccupied?</string>

    //Contact
    <string name="contact_us">Contact Us</string>
    <string name="web">https://onand-coffee.business.site</string>
    <string name="ig_acc">\@onandcoffee</string>

    //Stock
    <string name="stock_name">Stock Name</string>
    <string name="id_request">ID Request</string>
    <string name="metric">Metric</string>
    <string name="initial_stock">Initial Stock</string>
    <string name="in_stock">In</string>
    <string name="out_stock">Out</string>
    <string name="total_stock">Total Stock</string>
    <string name="add_stock">Add Stock</string>

    //Menu
    <string name="coffee">Coffee</string>
    <string name="non_coffee">Non Coffee</string>
    <string name="add_menu">Add Menu</string>
    <string name="menu_name">Name</string>
    <string name="menu_desc">Description</string>
    <string name="menu_price">Price</string>
    <string name="menu_order">Order</string>
    <string name="menu_coffee">Coffee?</string>
    <string name="order_empty">You have not select a menu!</string>

    //Order
    <string name="buyer_name">Buyer Name</string>
    <string name="no_table">No. Table</string>
    <string name="cash">Total Cash</string>
    <string name="proceed">Proceed</string>
    <string name="rp">Rp.%s</string>
    <string name="rp_">Rp.</string>

    //History
    <string name="table_">Meja %s</string>

    //Category
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="save">Save</string>
    <string name="add_category">Add category</string>
    <string name="delete">Delete</string>
    <string name="goods_stock">Goods stock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>