<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav"
    app:startDestination="@id/menu_meja">
    <fragment
        android:id="@+id/menu_meja"
        android:name="com.tessalonika.onandcafe.ui.table.TableFragment"
        android:label="@string/meja"
        tools:layout="@layout/fragment_table" />
    <fragment
        android:id="@+id/menu_category"
        android:name="com.tessalonika.onandcafe.ui.stock.StockFragment"
        android:label="@string/category" >
        <action
            android:id="@+id/action_menu_category_to_categoryAddFragment"
            app:destination="@id/categoryAddFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoryAddFragment"
        android:name="com.tessalonika.onandcafe.ui.stock.add.StockAddFragment"
        android:label="@string/add_category"
        tools:layout="@layout/fragment_stock_add" />
</navigation>